add 3 more blog posts

--- a/_includes/right_box.html
+++ b/_includes/right_box.html
@@ -1,4 +1,4 @@
-<div class="col-3 right-box">
+<div class="right-box">
     <h4>Recent posts</h4>
     <ul>
         {% for post in site.posts limit:5 %}
