--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,16 +16,25 @@
 {% include menu.html %}
 <div class="container">
     <div class="row">
-        {% for post in site.posts limit:5 %}
-        <div class="col-4">
-                <div class="article article-thumb">
-                    <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-                    {{ post.content | truncate: 200 }}
+        <div class="row">
+            <div class="col">
+                <div class="row">
+                    {% for post in site.posts limit:5 %}
+                    <div class="col-4">
+                        <div class="article article-thumb">
+                            <img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" />
+                            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+                            {{ post.content | truncate: 200 }}
+                        </div>
+                    </div>
+                    {% endfor %}
                 </div>
-        </div>
-        {% endfor %}
+            </div>
+            <div class="col-3">
+                {% include right_box.html %}
+            </div>
 
-        {% include right_box.html %}
+        </div>
     </div>
 </div>
 
