--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,12 @@
     <title>{{ page.title }} | Developer 2.0</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="/style.css">
+
+    <script type='text/javascript'>
+        /* <![CDATA[ */
+        var countVars = {"disqusShortname":"developer-2-0"};
+        /* ]]> */
+    </script>
 </head>
 <body>
 
@@ -17,16 +23,32 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            {% if page.mainPhoto %}
-            <img src="/assets/posts/{{page.mainPhoto}}" />
-            {% endif %}
-            <h1>{{ page.title }}</h1>
-            {{ content }}
+            <div class="row">
+                <div class="col">
+                    {% if page.mainPhoto %}
+                    <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
+                    {% endif %}
+                    <h1>{{ page.title }}</h1>
+                    {{ content }}
+
+                    <div id="disqus_thread"></div>
+                    <script>
+                        (function() { // DON'T EDIT BELOW THIS LINE
+                            var d = document, s = d.createElement('script');
+                            s.src = 'https://developer-2-0.disqus.com/embed.js';
+                            s.setAttribute('data-timestamp', +new Date());
+                            (d.head || d.body).appendChild(s);
+                        })();
+                    </script>
+                </div>
+
+            </div>
         </div>
-        {% include right_box.html %}
+        <div class="col-3">
+            {% include right_box.html %}
+        </div>
 
     </div>
-
 </div>
 
 {% include footer.html %}
