Be aware of coping in Go

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="row">
+            <div class="row blog-post">
                 <div class="col">
                     {% if page.mainPhoto %}
                     <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
