--- a/style.sass
+++ b/style.sass
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6
   width: 100%
 
 a
-  color: $primary-color
+  color: $secondary-color
   &:hover
     color: $secondary-color
     text-decoration: none
@@ -56,3 +56,8 @@ footer
 // menu
 .bg-light
   background-color: transparent
+
+.blog-post
+  img
+    margin: 0 auto
+    display: block
