Post/be aware of coping in go (#1)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>{{ page.title }} | Developer 2.0</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link href="/assets/main.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
 
     <script type='text/javascript'>
@@ -23,7 +24,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <div class="row">
+            <div class="row blog-post">
                 <div class="col">
                     {% if page.mainPhoto %}
                     <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
