--- a/style.sass
+++ b/style.sass
@@ -19,7 +19,6 @@ h1, h2, h3, h4, h5, h6
   width: 100%
 
 a
-  color: $primary-color
   &:hover
     color: $secondary-color
     text-decoration: none
@@ -37,16 +36,6 @@ a
   background-color: $secondary-color
   border-color: $secondary-color
 
-ul
-  list-style: square
-  line-height: 1.6
-  margin-top: 0
-  margin-bottom: 1rem
-  padding-left: 20px
-  li
-    margin-bottom: 10px
-    font-size: 14px
-
 footer
   background-color: $primary-color
   color: white
@@ -56,3 +45,8 @@ footer
 // menu
 .bg-light
   background-color: transparent
+
+.blog-post
+  img
+    margin: 0 auto
+    display: block
