--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Developer 2.0</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link href="/assets/main.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
@@ -16,24 +17,21 @@
 {% include menu.html %}
 <div class="container">
     <div class="row">
-        <div class="row">
-            <div class="col">
-                <div class="row">
-                    {% for post in site.posts limit:5 %}
-                    <div class="col-4">
-                        <div class="article article-thumb">
-                            <img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" />
-                            <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-                            {{ post.content | truncate: 200 }}
-                        </div>
+        <div class="col">
+            <div class="row">
+                {% for post in site.posts limit:5 %}
+                <div class="col-3">
+                    <div class="article article-thumb">
+                        <img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" />
+                        <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
+                        {{ post.content | strip_html | truncate: 200 }}
                     </div>
-                    {% endfor %}
                 </div>
+                {% endfor %}
             </div>
-            <div class="col-3">
-                {% include right_box.html %}
-            </div>
-
+        </div>
+        <div class="col-3">
+            {% include right_box.html %}
         </div>
     </div>
 </div>
