--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,10 @@
     <div class="row">
         <div class="col">
             <div class="row">
-                {% for post in site.posts limit:5 %}
-                <div class="col-3">
+                {% for post in site.posts %}
+                <div class="col-6">
                     <div class="article article-thumb">
-                        <img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" />
+                        <a href="{{ post.url }}"><img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" /></a>
                         <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
                         {{ post.content | strip_html | truncate: 200 }}
                     </div>
