--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,27 +23,22 @@
 {% include menu.html %}
 <div class="container">
     <div class="row">
-        <div class="col">
-            <div class="row blog-post">
-                <div class="col">
-                    {% if page.mainPhoto %}
-                    <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
-                    {% endif %}
-                    <h1>{{ page.title }}</h1>
-                    {{ content }}
+        <div class="col-9 blog-post">
+            {% if page.mainPhoto %}
+            <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
+            {% endif %}
+            <h1>{{ page.title }}</h1>
+            {{ content }}
 
-                    <div id="disqus_thread"></div>
-                    <script>
-                        (function() { // DON'T EDIT BELOW THIS LINE
-                            var d = document, s = d.createElement('script');
-                            s.src = 'https://developer-2-0.disqus.com/embed.js';
-                            s.setAttribute('data-timestamp', +new Date());
-                            (d.head || d.body).appendChild(s);
-                        })();
-                    </script>
-                </div>
-
-            </div>
+            <div id="disqus_thread"></div>
+            <script>
+                (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+                    s.src = 'https://developer-2-0.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                })();
+            </script>
         </div>
         <div class="col-3">
             {% include right_box.html %}
