add google analytics

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,17 @@
         var countVars = {"disqusShortname":"developer-2-0"};
         /* ]]> */
     </script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8338248-18"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-8338248-18');
+    </script>
+
 </head>
 <body>
 
