publish the art

--- a/style.sass
+++ b/style.sass
@@ -50,3 +50,10 @@ footer
   img
     margin: 0 auto
     display: block
+
+.post-details
+  font-size: 14px
+
+a.read-more
+  margin: 10px 0
+  display: block
