--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,15 @@
                 <div class="col-6">
                     <div class="article article-thumb">
                         <a href="{{ post.url }}"><img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" /></a>
-                        <h4><a href="{{ post.url }}">{{ post.title }}</a></h4>
-                        {{ post.content | strip_html | truncate: 200 }}
+                        <h4><a href="{{ post.url }}">{{ post.title }}</a><span class="post-details">
+                            {{ post.date | date_to_string }}
+                        </span></h4>
+
+
                     </div>
+
+                    <div>{{ post.content | strip_html | truncate: 200 }}</div>
+                    <a href="{{ post.url }}" class="read-more">read more...</a>
                 </div>
                 {% endfor %}
             </div>
