--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,49 +1,10 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>Developer 2.0</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link href="/assets/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8338248-18"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-8338248-18');
-    </script>
-
-</head>
-<body>
-
-<div class="site-header">
-    <div class="container">
-        <img src="/assets/images/logo.jpg" />
-    </div>
-</div>
-{% include menu.html %}
+{% include head.html %}
 <div class="container">
     <div class="row">
         <div class="col">
             <div class="row">
                 {% for post in site.posts %}
-                <div class="col-6">
-                    <div class="article article-thumb">
-                        <a href="{{ post.url }}"><img src="/assets/posts/{{post.mainPhoto}}" class="img-fluid" /></a>
-                        <h4><a href="{{ post.url }}">{{ post.title }}</a><span class="post-details">
-                            {{ post.date | date_to_string }}
-                        </span></h4>
-
-
-                    </div>
-
-                    <div>{{ post.content | strip_html | truncate: 200 }}</div>
-                    <a href="{{ post.url }}" class="read-more">read more...</a>
-                </div>
+                {% include post_small.html %}
                 {% endfor %}
             </div>
         </div>
@@ -54,6 +15,3 @@
 </div>
 
 {% include footer.html %}
-
-</body>
-</html>
