--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,55 +1,18 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>{{ page.title }} | Developer 2.0</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link href="/assets/main.css" rel="stylesheet">
-    <link rel="stylesheet" href="/style.css">
+{% include head.html %}
 
-    <script type='text/javascript'>
-        /* <![CDATA[ */
-        var countVars = {"disqusShortname":"developer-2-0"};
-        /* ]]> */
-    </script>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8338248-18"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'UA-8338248-18');
-    </script>
-
-</head>
-<body>
-
-<div class="site-header">
-    <div class="container">
-        <img src="/assets/images/logo.jpg" />
-    </div>
-</div>
-{% include menu.html %}
 <div class="container">
     <div class="row">
         <div class="col-9 blog-post">
             {% if page.mainPhoto %}
             <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
             {% endif %}
-            <h1>{{ page.title }}</h1>
+            <h1>{{ page.title }} <span class="post-details">{{ page.date | date_to_string }}</span></h1>
             {{ content }}
 
-            <div id="disqus_thread"></div>
-            <script>
-                (function() { // DON'T EDIT BELOW THIS LINE
-                    var d = document, s = d.createElement('script');
-                    s.src = 'https://developer-2-0.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
-                })();
-            </script>
+            {% include tags.html %}
+            {% include post_categories.html %}
+
+            {% include comments.html %}
         </div>
         <div class="col-3">
             {% include right_box.html %}
@@ -59,6 +22,3 @@
 </div>
 
 {% include footer.html %}
-
-</body>
-</html>
