--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@
             {% if page.mainPhoto %}
             <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
             {% endif %}
-            <h1>{{ page.title }} <span class="post-details">{{ page.date | date_to_string }}</span></h1>
+            <h1>{{ page.title }}</h1>
             {{ content }}
 
             {% include tags.html %}
