add categories and keywords

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="/assets/main.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+    {% include head_keywords.html %}
 
     <script type='text/javascript'>
         /* <![CDATA[ */
