--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,8 @@
             {% include tags.html %}
             {% include post_categories.html %}
 
+            {% include author.html %}
+
             {% include comments.html %}
         </div>
         <div class="col-3">
