--- a/style.sass
+++ b/style.sass
@@ -57,3 +57,9 @@ footer
 a.read-more
   margin: 10px 0
   display: block
+
+.author-desc
+  margin: 20px
+  h4
+    font-size: 16px
+    margin-top: 0
