--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     <link href="/assets/main.css" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
     {% include head_keywords.html %}
-    <link rel="alternate" type="application/rss+xml" title="Alwis blog &raquo; Kanał z wpisami" href="/feed.xml" />
+    <link rel="alternate" type="application/rss+xml" title="Developer 2.0 blog" href="/feed.xml" />
 
     <script type='text/javascript'>
         /* <![CDATA[ */
