--- a/_includes/author.html
+++ b/_includes/author.html
@@ -5,6 +5,7 @@
     <div class="col-10">
         <h4>About the author</h4>
         Hi! My name is Bartek. I'm a developer since 2011. I love to learn by sharing the knowledge. You can find me on <a href="https://twitter.com/kabanek">Twitter</a> or <a href="https://www.linkedin.com/in/bart%C5%82omiej-klimczak-a5ba619b/">Linkedin</a>.
+        I'm a backend engineer at Brainly.
     </div>
 
 </div>
