--- a/_includes/newsletter.html
+++ b/_includes/newsletter.html
@@ -1,7 +1,7 @@
 <form action="https://thrownewexception.us13.list-manage.com/subscribe/post?u=9f6532434ab395c593b2927ec&amp;id=30b7030cf6" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate="novalidate">
     <div id="mc_embed_signup_scroll">
-        <h4>I want to help you become a Go developer</h4>
-        <div>Subscribe to receive Golang Tips and Tricks every week!</div>
+        <h4>I want to help you become a developer</h4>
+        <div>That's why I can let you know about new blogposts on your email</div>
         <div class="mc-field-group form-group">
             <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
             </label>
@@ -18,7 +18,6 @@
             <div class="response" id="mce-success-response" style="display:none"></div>
         </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_9f6532434ab395c593b2927ec_30b7030cf6" tabindex="-1" value=""></div>
-        <input type="hidden" value="1" name="group[14005][1]" id="mce-group[14005]-14005-0">
 
         <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn btn-primary"></div>
     </div>
