add links to social media

--- a/_includes/right_box.html
+++ b/_includes/right_box.html
@@ -8,4 +8,10 @@
 
     {% include newsletter.html %}
 
+    <h4>You can find me</h4>
+	<ul>
+		<li><a href="https://twitter.com/0Developer2">on Twitter</a></li>
+		<li><a href="https://www.facebook.com/developer.two.zero/">on Facebook</a></li>
+		<li>or just <a href="mailto:bklimczak@developer20.com">mail me</a> :)</li>
+	</ul>
 </div>
