--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,7 @@
             <img src="/assets/posts/{{page.mainPhoto}}" class="img-fluid" />
             {% endif %}
             <h1>{{ page.title }}</h1>
+	    <a href="https://twitter.com/0Developer2?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @0Developer2</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             {{ content }}
 
             {% include tags.html %}
