improve og tags

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,9 +26,11 @@
     </script>
 
     <meta name="twitter:title" content="{{ title }}">
+    <meta property="og:title" content="{{ title }}" />
     <meta name="twitter:creator" content="@0Developer2">
     {% if page.mainPhoto %}
     <meta name="twitter:image" content="/assets/posts/{{page.mainPhoto}}">
+    <meta property="og:image" content="/assets/posts/{{page.mainPhoto}}" />
     {% endif %}
 
     <meta name="twitter:domain" content="developer20.com">
