add simple feedback form

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,6 +13,8 @@
             {% include tags.html %}
             {% include post_categories.html %}
 
+            {% include post_feedback.html %}
+
             {% include author.html %}
 
             {% include comments.html %}
