add push notification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,6 +37,17 @@
 
     <meta name="twitter:domain" content="developer20.com">
 
+    <!-- PushAlert -->
+    <script type="text/javascript">
+            (function(d, t) {
+                    var g = d.createElement(t),
+                    s = d.getElementsByTagName(t)[0];
+                    g.src = "https://cdn.pushalert.co/integrate_c5119b62d3e99a7131e9c1c31f803f8b.js";
+                    s.parentNode.insertBefore(g, s);
+            }(document, "script"));
+    </script>
+    <!-- End PushAlert -->
+
     {% include head_ga.html %}
 </head>
 <body>
