--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -1,4 +1,5 @@
 <ul>
-    	<li><a href="{{ "about-me" | relURL }}">About me</a></li>
+	<li><a href="{{ "gocracow" | relURL }}">GoCracow</a></li>
+	<li><a href="{{ "about-me" | relURL }}">About me</a></li>
 	<li><a href="/index.xml">RSS</a></li>
 </ul>
