add see also section

--- a/layouts/partials/single/footer.html
+++ b/layouts/partials/single/footer.html
@@ -14,6 +14,15 @@ Tags:
 
 {{end}}
 
+{{ $related := .Site.RegularPages.Related . | first 5 }}
+{{ with $related }}
+<h3>See Also</h3>
+<ul>
+{{ range . }}
+    <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+{{ end }}
+</ul>
+{{ end }}
 
 
 <!-- Begin Mailchimp Signup Form -->
