add facebook title tag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,6 +39,11 @@
     {{- end }}
 
     <!-- end twitter card -->
+
+    <!-- facebook -->
+    <meta property="og:type"               content="article" />
+    <meta property="og:title"              content="{{ .Title }}" />
+    <!-- end facebook -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8338248-18"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
