--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 	{{ partial "index/introduction.html" . }}
 
 	<div class="catalogue">
-		{{ range where .Paginator.Pages "Section" "post" }}
+		{{ range where .Paginator.Pages "Section" "in" site.Params.mainSections }}
 			{{ .Render "summary" }}
 		{{ end }}
 	</div>
