add reviews to top menu

--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -1,4 +1,5 @@
 <ul>
+    <li><a href="/reviews/">Books reviews</a></li>
     <li><a href="/newsletter">Newsletter</a></li>
     <li><a href="/categories/Golang/">Golang</a></li>
     <li><a href="{{ "about-me" | relURL }}">About me</a></li>
