add google tag manager

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,6 +8,13 @@
     {{- end }}
 
     <title>{{- if .IsHome }}{{ .Site.Title }}{{- else }}{{ .Title }} &middot; {{ .Site.Title }}{{- end }}</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+                new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+        })(window,document,'script','dataLayer','GTM-KD97NJK');</script>
+    <!-- End Google Tag Manager -->
 
     <!-- CSS -->
     {{- $inServerMode	:= .Site.IsServer }}
@@ -47,17 +54,6 @@
     <meta property="og:type"               content="article" />
     <meta property="og:title"              content="{{ .Title }}" />
     <!-- end facebook -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-8338248-18"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-8338248-18');
-    </script>
 
     <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
     <script type="text/javascript">
