--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -55,17 +55,18 @@
     <meta property="og:title"              content="{{ .Title }}" />
     <!-- end facebook -->
 
-    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
-    <script type="text/javascript">
-        window.dojoRequire(["mojo/signup-forms/Loader"], function(L) {
-            L.start({
-                "baseUrl": "mc.us13.list-manage.com",
-                "uuid": "9f6532434ab395c593b2927ec",
-                "lid": "30b7030cf6",
-                "uniqueMethods": true
-            })
-        })
+    <!-- MailerLite Universal -->
+    <script>
+        (function(m,a,i,l,e,r){ m['MailerLiteObject']=e;function f(){
+            var c={ a:arguments,q:[]};var r=this.push(c);return "number"!=typeof r?r:f.bind(c.q);}
+            f.q=f.q||[];m[e]=m[e]||f.bind(f.q);m[e].q=m[e].q||f.q;r=a.createElement(i);
+            var _=a.getElementsByTagName(i)[0];r.async=1;r.src=l+'?v'+(~~(new Date().getTime()/1000000));
+            _.parentNode.insertBefore(r,_);})(window, document, 'script', 'https://static.mailerlite.com/js/universal.js', 'ml');
+
+        var ml_account = ml('accounts', '961542', 'n5z2u6s1o1', 'load');
     </script>
+    <!-- End MailerLite Universal -->
+
     <!-- RSS -->
     <link href="{{ with .OutputFormats.Get "RSS" }}{{ .RelPermalink }}{{ end }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 </head>
