--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -9,6 +9,14 @@
             <a href="/reviews/">Books reviews</a>
         </div>
     </div>
+    <div class="dropdown">
+        <button class="dropbtn">My projects
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+            <a href="/projects/gobdd/">GoBDD</a>
+        </div>
+    </div>
     <a href="{{ "about-me" | relURL }}">About me</a>
     <a href="/index.xml">RSS</a>
     <div class="search">
