--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -1,5 +1,6 @@
 <div class="navbar">
     <a href="/">Home</a>
+    <a href="/newsletter">Newsletter</a>
     <div class="dropdown">
         <button class="dropbtn">Categories
             <i class="fa fa-caret-down"></i>
