add google verification code

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,6 +7,8 @@
     <meta name="description" content="{{ .Description }}">
     {{- end }}
 
+    <meta name="google-site-verification" content="XO2NNSxIZyKJUO3LcnKZB7qeZPFr8rTxF4tKUPqWXOI" />
+
     <title>{{- if .IsHome }}{{ .Site.Title }}{{- else }}{{ .Title }} &middot; {{ .Site.Title }}{{- end }}</title>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
