fix: add enabling linter

--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -16,6 +16,7 @@
         </button>
         <div class="dropdown-content">
             <a href="/projects/gobdd/">GoBDD</a>
+            <a href="/projects/cyclop/">Cyclop</a>
         </div>
     </div>
     <a href="{{ "about-me" | relURL }}">About me</a>
