--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -10,6 +10,7 @@
             <a href="/reviews/">Books reviews</a>
         </div>
     </div>
+    <a href="/trainings">Go trainings</a>
     <div class="dropdown">
         <button class="dropbtn">My projects
             <i class="fa fa-caret-down"></i>
