--- a/themes/tale/assets/scss/tale/_code.scss
+++ b/themes/tale/assets/scss/tale/_code.scss
@@ -23,7 +23,7 @@ pre code {
 }
 
 .highlight {
-  background-color: $grey-3;
+  background-color: #272822;
   border-radius: 3px;
   line-height: 1.4;
   margin: 0 0 1rem;
