remove all featured images

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -40,7 +40,15 @@
 
     <!-- twitter card -->
     <meta name="twitter:card" content="summary" />
-    {{ $img := (.Page.Resources.ByType "image").GetMatch "*featured*" }}
+    {{ $img := resources.Get "baseImg.png"}}
+    {{ $img = $img.Filter (images.Text .Title (dict
+        "color" "#000000"
+        "size" 60
+        "linespacing" 2
+        "x" 10
+        "y" 20
+    ))}}
+
     {{ with $img }}
     {{ $big := .Fill "1024x300 top" }}
     <meta property="og:url" content="{{ $big.RelPermalink | absURL }}" />
