--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <nav class="nav">
 	<div class="nav-container">
 		<a href="{{ "/" | relURL }}">
-			<h2 class="nav-title">{{ .Site.Title }}</h2>
+			<div class="post-title">{{ .Site.Title }}</div>
 		</a>
 		{{ partial "header-menu.html" . }}
 	</div>
