--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,6 +6,12 @@
 		{{ partial "single/header.html" . }}
 
 		{{ .Content }}
+        {{ if .Page.Store.Get "hasMermaid" }}
+          <script type="module">
+            import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.esm.min.mjs';
+            mermaid.initialize({ startOnLoad: true });
+          </script>
+        {{ end }}
 
 		{{ partial "single/footer.html" . }}
 	</div>
