--- a/layouts/shortcodes/info.html
+++ b/layouts/shortcodes/info.html
@@ -1,6 +1,6 @@
 <div class="info">
-    <div class="info-header"><i class="fas fa-info-circle"></i> {{ .Get "title" }}</div>
+    <div class="info-header"><i class="fas fa-info-circle"></i> {{ .Get "title" | markdownify }}</div>
     <div class="info-body">
-        {{ .Get "msg" }}
+        {{ .Get "msg" | markdownify }}
     </div>
 </div>
