--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -8,6 +8,7 @@
         <div class="dropdown-content">
             <a href="/categories/Golang/">Golang</a>
             <a href="/reviews/">Books reviews</a>
+            <a href="/ecommerce-notes">Ecommerce notes</a>
         </div>
     </div>
     <a href="/trainings">Go trainings</a>
@@ -16,6 +17,7 @@
             <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
+            <a href="https://github.com/golang-app/ecommerce">E-commerce</a>
             <a href="/projects/gobdd/">GoBDD</a>
             <a href="/projects/cyclop/">Cyclop</a>
         </div>
