--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -8,7 +8,7 @@
         <div class="dropdown-content">
             <a href="/categories/Golang/">Golang</a>
             <a href="/reviews/">Books reviews</a>
-            <a href="/ecommerce-notes">Ecommerce notes</a>
+            <a href="/categories/Ecommerce">Ecommerce notes</a>
         </div>
     </div>
     <a href="/trainings">Go trainings</a>
