--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,7 +19,7 @@
     <!-- End Google Tag Manager -->
 
     <!-- CSS -->
-    {{- $inServerMode	:= .Site.IsServer }}
+    {{- $inServerMode	:= true }}
     {{- $cssTarget		:= "css/style.css" }}
     {{- $cssOptions		:= cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle" "compressed") }}
     {{- $style			:= resources.Get "scss/tale.scss" | toCSS $cssOptions }}
