--- a/layouts/partials/header-menu.html
+++ b/layouts/partials/header-menu.html
@@ -2,9 +2,7 @@
     <a href="/">Home</a>
     <a href="/newsletter">Newsletter</a>
     <div class="dropdown">
-        <button class="dropbtn">Categories
-            <i class="fa fa-caret-down"></i>
-        </button>
+        <button class="dropbtn">Categories ▾</button>
         <div class="dropdown-content">
             <a href="/categories/Golang/">Golang</a>
             <a href="/reviews/">Books reviews</a>
@@ -13,9 +11,7 @@
     </div>
     <a href="/trainings">Go trainings</a>
     <div class="dropdown">
-        <button class="dropbtn">My projects
-            <i class="fa fa-caret-down"></i>
-        </button>
+        <button class="dropbtn">My projects ▾</button>
         <div class="dropdown-content">
             <a href="https://github.com/golang-app/ecommerce">E-commerce</a>
             <a href="/projects/gobdd/">GoBDD</a>
