--- a/layouts/shortcodes/info.html
+++ b/layouts/shortcodes/info.html
@@ -1,5 +1,5 @@
 <div class="info">
-    <div class="info-header"><i class="fas fa-info-circle"></i> {{ .Get "title" | markdownify }}</div>
+    <div class="info-header">ℹ️ {{ .Get "title" | markdownify }}</div>
     <div class="info-body">
         {{ .Get "msg" | markdownify }}
     </div>
