--- a/layouts/shortcodes/warning.html
+++ b/layouts/shortcodes/warning.html
@@ -1,5 +1,5 @@
 <div class="warning">
-    <div class="warning-header"><i class="fas fa-exclamation-circle"></i> {{ .Get "title" }}</div>
+    <div class="warning-header">⚠️ {{ .Get "title" }}</div>
     <div class="warning-body">
         {{ .Get "msg" }}
     </div>
