--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,16 +19,8 @@
     <!-- End Google Tag Manager -->
 
     <!-- CSS -->
-    {{- $inServerMode	:= true }}
-    {{- $cssTarget		:= "css/style.css" }}
-    {{- $cssOptions		:= cond ($inServerMode) (dict "targetPath" $cssTarget "enableSourceMap" true) (dict "targetPath" $cssTarget "outputStyle" "compressed") }}
-    {{- $style			:= resources.Get "scss/tale.scss" | toCSS $cssOptions }}
-    <link rel="stylesheet" href="{{ $style.RelPermalink }}">
-    <link rel="stylesheet" href="/style.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/minimal-dark.css">
     <script src="/js/search.js"></script>
-    <link rel="stylesheet" href="/fontawesome/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i,700">
     {{ range .Site.Params.css -}}
     <link rel="stylesheet" href="{{ . | relURL }}">
     {{ end -}}
